--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "keys",
   "version": "0.0.0",
-  "main": "es5.js",
+  "main": "index.js",
   "scripts": {
     "build": "babel es6.js -o es5.js",
     "test": "istanbul test ./node_modules/mocha/bin/_mocha --report html -- -R spec",
@@ -10,7 +10,6 @@
   "author": "Pedram Emrouznejad (https://github.com/pemrouz)",
   "license": "pemrouz.mit-license.org",
   "devDependencies": {
-    "babel": "^5.2.6",
     "chai": "^2.3.0",
     "coveralls": "^2.11.2",
     "istanbul": "^0.3.13",
